fix spacing on listing

--- a/assets/scss/_article_summary.scss
+++ b/assets/scss/_article_summary.scss
@@ -11,6 +11,9 @@
     display: flex;
     text-align: left;
   }
+  .featured-image-thumb {
+    line-height: 0;
+  }
   .featured-image-thumb img {
     max-width: 125px;
     border-radius: 50%;
